Cambio de nombre a proyecto en github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jerry-gzh.github.io/firebase-auth",
+  "homepage": "https://jerry-gzh.github.io/Audiophile",
   "name": "react-firebase-app",
   "version": "0.1.0",
   "private": true,
